Fix sticky hover on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 }
 
 .highlight {
-  @apply transition ease-in-out duration-300 dark:hover:text-green-400 hover:text-purple-600 cursor-pointer transform hover:scale-110 focus:scale-110 hover:-translate-y-1;
+  @apply transition ease-in-out duration-300 hover-hover:dark:text-green-400 hover-hover:text-purple-600 cursor-pointer transform hover-hover:scale-110 focus:scale-110 hover-hover:-translate-y-1;
 }
 
 .link {
